--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 <body>
 
   <!-- Background Music -->
-  <audio id="bgMusic" autoplay loop>
-    <source src="Jin Sheng Yuan.mp3" type="audio/mpeg">
+  <audio id="bgMusic" loop>
+    <source src="Jin%20Sheng%20Yuan.mp3" type="audio/mpeg">
   </audio>
+
 
   <h1>Hey 😊</h1>
   <p>Can you be my Valentine? 💖</p>
@@ -82,3 +83,4 @@
 
 </body>
 </html>
+
